Tweaked some style and added trash can icon

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                             <th class="author">Author</th>
                             <th class="pages">Pages</th>
                             <th class="read">Read</th>
+                            <th class="remove">Remove</th>
                         </tr>
                     </thead>
                     <tbody id="book-list">
@@ -50,10 +51,11 @@
 
         <template id="book-row">
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="title"></td>
+                <td class="author"></td>
+                <td class="pages"></td>
+                <td class="read"></td>
+                <td class="remove"><img src="trash-can-outline.png" alt="trash can image for button">
             </tr>
         </template>
     </body>
