Added button type to cancel button to fix error showing up in console

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <label for="book-read">Read</label>
                     <input id="book-read" type="checkbox">
                     <div class="buttons">
-                        <button id="cancel-add-book-button">Cancel</button>
+                        <button id="cancel-add-book-button" type="button">Cancel</button>
                         <button id="add-new-book-button" type="submit">Add Book</button>
                     </div>
                 </form>
