Add style and selectors for author and title headers

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <table>
                     <thead>
                         <tr>
-                            <th class="title">Title</th>
-                            <th class="author">Author</th>
+                            <th class="title"><p>Title</p></th>
+                            <th class="author"><p>Author</p></th>
                             <th class="pages">Pages</th>
                             <th class="read">Read</th>
                             <th class="remove">Remove</th>
