Use webpack to manage images

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                 <td class="author"></td>
                 <td class="pages"></td>
                 <td class="read"></td>
-                <td class="remove"><img src="trash-can-outline.png" alt="trash can image for button">
+                <td class="remove"><img src="" alt="trash can image for button">
             </tr>
         </template>
     </body>
