Create target for react login component

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
             <div class="header">
                 <h1>Odin Library</h1>
                 <button id="open-add-book-modal">Add book +</button>
+                <div id="user-login"></div>
             </div>
             <div class="library">
                 <table>
