Add modal class to add-book-modal

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                 </table>
             </div>
         </div>
-        <div id="add-book-modal">
+        <div id="add-book-modal" class="modal">
             <div class="new-book">
                 <form id="add-book-form">
                     <h1>Add New Book</h1>
